# Rohit-Dadgal---QuadB_Tasks

./: README.md
Week 1/Week1_Day 1- HelloWorld And SImple Rust prog/: README.md  dfx.json  package-lock.json  package.json
Week 1/Week1_Day 2 - Data Storage Canister/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Week 1/Week1_Day 3 - Counter Caanister/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Week 1/Week1_Day 4 - TODO List/: README.md  dfx.json  package-lock.json
Week 1/Week1_Day 5 - Voting System/: dfx.json  package-lock.json
Week 1/Week1_Day 5 - Voting System/src/voting_system_backend/: Cargo.toml  voting_system_backend.did
Week 1/Week1_Day 5 - Voting System/src/voting_system_backend/src/: lib.rs
Week 1/plug_integration/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Week 2/First Solana/: Anchor.toml  package-lock.json
Week 2/First Solana/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
Week 2/SPL Token/: bostMTkGdVGjWZnZWn2wN8W2fAANkQjXHAsLTComFJQ.json  metadata.json  mntj8Gb62wkUrE42dDcDfCjUb6o1rEzcvtcqmKPTsdM.json
Week 2/crud/: README.md  package-lock.json
Week 2/crud/.next/: trace  (+1 more)
Week 3/Re-entrancy Attack Prevention/: hardhat.config.js  package-lock.json  package.json
Week 3/Simple Twitter Smart Contract/: hardhat.config.js  package-lock.json  package.json
Week 4/Aptos Counter/: Move.toml
Week 4/Aptos Gas Refund Tracker/: next.config.mjs  package.json
Week 4/my-lending-dapp/: Move.toml
(+169 files in other folders)
