[package]
name = "voting_system_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ic-cdk = "0.17.1"
candid = "0.10.13"
serde = "1.0"          # Serde for (De)serialization
serde_json = "1.0"  
once_cell = "1.18"
num-traits = "0.2"